# Dynamic-IP-Provider-Service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ansible.yml  compose-local.yml  compose.yml  inventory.yml  pyproject.toml  ruff.toml
provider/: container.py  main.py
provider/api/: admin_router.py  api_handler.py  users_router.py
provider/auth/: auth_router.py  auth_service.py
provider/constants/: exceptions.py  roles.py
provider/core/: admin_service.py  users_service.py
provider/db/: database.py
provider/db/repositories/: addresses_repository.py  users_repository.py
provider/notifications/: email_service.py  scheduler_service.py
provider/schemas/: binding_schema.py  user_schema.py
provider/services/: config_service.py  logger_service.py
provider/utils/: jwt_service.py
